update annotations to be applicable to methods add tests for references, versioning, and indexing